<resources>
    <string name="app_name">android-app</string>
    <string name="pon_tu_email">Pon tu email</string>
    <string name="contrasena">Contraseña</string>
    <string name="email">Email</string>
    <string name="pon_tu_contrase_a">Pon tu contraseña</string>
    <string name="iniciar_sesi_n">Iniciar sesión</string>
    <string name="no_tienes_cuenta_aun_registrate">No tienes cuenta aun? Registrate</string>
    <string name="log_in">Iniciar Sesion</string>
    <string name="registro">Registro</string>
    <string name="registrarse">Registrarse</string>
    <string name="incidencias">Incidencias</string>
    <string name="ver_m_s"><![CDATA[Ver más >]]></string>
    <string name="camaras">Camaras</string>
    <string name="flujos">Flujos</string>
    <string name="app_de_tr_fico">App de tráfico</string>
    <string name="mapa">Mapa</string>
    <string name="favoritos">Favoritos</string>
    <string name="todo">TODO</string>
    <string name="a_adir">Añadir</string>

</resources>