<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clTitleBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:paddingTop="16dp"
        android:paddingBottom="16dp">

        <TextView
            android:id="@+id/tvAppTitle"
            android:layout_width="252dp"
            android:layout_height="39dp"
            android:layout_marginEnd="206dp"
            android:text="@string/app_de_tr_fico"
            android:textAlignment="center"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btnSettings"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <ImageButton
            android:id="@+id/btnSettings"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/todo"
            android:src="@drawable/ic_mas"
            app:layout_constraintBottom_toBottomOf="@+id/tvAppTitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tvAppTitle" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvMapa"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintTop_toBottomOf="@+id/clTitleBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/cvFavoritos"
        app:cardElevation="4dp"
        app:cardCornerRadius="8dp"
        app:layout_constraintHorizontal_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_map"
                android:contentDescription="@string/todo" /> <!-- Replace with your map icon resource -->

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mapa" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvFavoritos"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toBottomOf="@+id/clTitleBar"
        app:layout_constraintStart_toEndOf="@+id/cvMapa"
        app:layout_constraintEnd_toEndOf="parent"
        app:cardElevation="4dp"
        app:cardCornerRadius="8dp"
        app:layout_constraintHorizontal_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_heart"
                android:contentDescription="@string/todo" /> <!-- Replace with your favorites icon resource -->

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/favoritos" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>


    <LinearLayout
        android:id="@+id/llIncidenciasContainer"
        android:layout_width="373dp"
        android:layout_height="70dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="23dp"
        android:layout_marginBottom="14dp"
        android:background="@drawable/border_black"
        android:orientation="horizontal"
        android:padding="8dp"
        app:layout_constraintBottom_toTopOf="@+id/llCamaraContainer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"> <!-- Optional padding inside the LinearLayout -->


        <TextView
            android:id="@+id/tvIncidencias"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="start|center_vertical"
            android:text="@string/incidencias"
            android:textColor="@color/black"
            android:textSize="18sp"
            tools:ignore="MissingConstraints" />

        <Button
            android:id="@+id/btnIncidenciasVerMas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/border_black"
            android:gravity="end|center_vertical"
            android:text="@string/ver_m_s"
            android:textColor="@color/black"
            tools:ignore="MissingConstraints" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llCamaraContainer"
        android:layout_width="373dp"
        android:layout_height="70dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="23dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/border_black"
        android:orientation="horizontal"
        android:padding="8dp"
        app:layout_constraintBottom_toTopOf="@+id/llFlujosContainer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"> <!-- Optional padding inside the LinearLayout -->


        <TextView
            android:id="@+id/tvCamaras"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="start|center_vertical"
            android:text="@string/camaras"
            android:textColor="@color/black"
            android:textSize="18sp"
            tools:ignore="MissingConstraints" />

        <Button
            android:id="@+id/btnCamarasVerMas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/border_black"
            android:gravity="end|center_vertical"
            android:text="@string/ver_m_s"
            android:textColor="@color/black"
            tools:ignore="MissingConstraints" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llFlujosContainer"
        android:layout_width="373dp"
        android:layout_height="70dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="23dp"
        android:layout_marginBottom="245dp"
        android:background="@drawable/border_black"
        android:orientation="horizontal"
        android:padding="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"> <!-- Optional padding inside the LinearLayout -->


        <TextView
            android:id="@+id/tvFlujos"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="start|center_vertical"
            android:text="@string/flujos"
            android:textColor="@color/black"
            android:textSize="18sp"
            tools:ignore="MissingConstraints" />

        <Button
            android:id="@+id/btnFlujosVerMas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/border_black"
            android:gravity="end|center_vertical"
            android:text="@string/ver_m_s"
            android:textColor="@color/black"
            tools:ignore="MissingConstraints" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
